# target-cloudpubsub

./: LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_cloudpubsub/: __init__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
